# check-raise-gen-return

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
.github/workflows/: python-package.yml
check_raise_gen_return/: __init__.py  check_raise_gen_return.py
tests/: test_check_raise_gen_return.py
