[metadata]
name = check-raise-gen-return
version = 0.0.1
description = pre-commit hook that checks for tornados gen.Return
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pawciobiel/check-raise-gen-return/
author = Paweł Bielecki
author_email = pawciobiel@gmail.com
license = GNU GPL
license_files = LICENSE
classifiers =
    License :: GNU GPL
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pre-commit >= 2.20.0
python_requires = >=3.8

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    check-raise-gen-return = check_raise_gen_return.check_raise_gen_return:main

[bdist_wheel]
universal = True
